# ondance_public

./: .gitignore  BACKEND_FRONTEND.md  DOSSIE_ONDANCE.md  GUIA_DE_USO.md  README.md  atualizar_na_vps.sh
.claude/: settings.local.json
.github/workflows/: backend.yml  frontend.yml
backend/: CLAUDE.md  README.md  conftest.py  pyproject.toml
backend/api/: adapters.py  serializers.py  urls.py  views.py
backend/api/tests/: conftest.py  test_admin_courses.py  test_admin_users.py  test_api_view.py  test_cities.py  test_course_detail.py  test_course_modules.py  test_courses.py  test_password_change.py  test_profile.py  test_published_courses.py  test_teacher_courses.py
backend/contrib/: gen_cities_fixture.py
backend/course/: models.py
backend/course/migrations/: 0001_initial.py  0002_initial.py  0003_course_description_course_duration_course_emoji_and_more.py
backend/course/tests/: test_models.py
backend/kernel/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: admin.py  models.py  pagination.py
backend/user/fixtures/: cities.json  states.json
backend/user/migrations/: 0001_initial.py
backend/user/tests/: conftest.py  test_models.py
frontend/: .env.example  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/boot/: axios.js
frontend/src/composables/: useAuth.js  useGoogleAuth.js
frontend/src/css/: app.css
frontend/src/layouts/: AdminLayout.vue  CoursesLayout.vue  MainLayout.vue  ProfessorLayout.vue  StudentLayout.vue  TeacherLayout.vue
frontend/src/pages/: HelpPage.vue  IndexPage.vue  LoginPage.vue  ProfilePage.vue  RegisterPage.vue
(+41 files in other folders)
